--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cy:verify": "cypress verify"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "async": "^2.0.0-rc.4",
     "cross-env": "^7.0.2",
     "cypress": "^3.3.1",
