--- a/.github/workflows/codesonar.yml
+++ b/.github/workflows/codesonar.yml
@@ -1,11 +1,11 @@
 name: CodeSonar JS Scan
 on:
-  push:                  # Only run onces the Pull request is created
+  push:                  
     branches:
       - 'feature/**'               # Feature Branches
   pull_request:
     branches:
-      - 'release/**'       
+      - 'release/**'       # on Pull request is created
   
 jobs:
   CodeSonar_Analyze:
@@ -30,7 +30,7 @@ jobs:
       CSONAR_CSHOME: /opt/codesonar
       CS_USER_HOME: /__w/numpy/numpy
       COMMIT_HASH: ${{ github.sha }}
-      REPO_URL: "https://github.com/CodeSecure-SE/nodegoat"    # the github.repositoryUrl is not an http-link.
+      REPO_URL: "https://github.com/CodeSecure-SE/nodegoat" 
       TARGET: ${{ github.base_ref }}
       IS_PR: ${{ github.event_name }}
     steps:
