--- a/.github/workflows/codesonar.yml
+++ b/.github/workflows/codesonar.yml
@@ -28,7 +28,7 @@ jobs:
       CSONAR_HUB_USER: "${{ secrets.CSONAR_HUB_USER }}"
       CSONAR_HUB_PASSWORD: "${{ secrets.CSONAR_HUB_PASS }}"
       CSONAR_CSHOME: /opt/codesonar
-      CS_USER_HOME: /__w/nodegoat/nodegoat
+      CS_USER_HOME: /__w/NodeGoat/NodeGoat
       COMMIT_HASH: ${{ github.sha }}
       REPO_URL: "https://github.com/CodeSecure-SE/nodegoat" 
       TARGET: ${{ github.base_ref }}
