--- a/.github/workflows/codesonar.yml
+++ b/.github/workflows/codesonar.yml
@@ -12,7 +12,7 @@ jobs:
     permissions: write-all
     runs-on: self-hosted
     container:
-      image: ghcr.io/codesecure-se/node-cso-builder:8.1b1
+      image: ghcr.io/codesecure-se/node-cso-builder:8.1p0
       credentials:
           username: ${{ github.actor }}
           password: ${{ secrets.github_token }}
@@ -24,7 +24,7 @@ jobs:
       ROOT_TREE: "OSS-Projects/nodegoat-GitHub" 
       PROJECT_NAME: "nodegoat"
       BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
-      CSONAR_HUB_URL: "https://duck.dyndns.org:7340" 
+      CSONAR_HUB_URL: "https://partnerdemo.codesonar.com" 
       CSONAR_HUB_USER: "${{ secrets.CSONAR_HUB_USER }}"
       CSONAR_HUB_PASSWORD: "${{ secrets.CSONAR_HUB_PASS }}"
       CSONAR_CSHOME: /opt/codesonar
@@ -51,7 +51,9 @@ jobs:
              npm install
              npm install --save-dev @microsoft/eslint-formatter-sarif
              npx eslint --no-inline-config -f @microsoft/eslint-formatter-sarif -o codesonar-scan.sarif . || true
-             python3 cso-scripts/build_and_analyze.py -noupload codesonar.conf codesonar import_sarif.py codesonar-scan.sarif -include-sources '**/*.js' -exclude-sources 'node_modules/**/*' -exclude-sources 'test/**/*'
+             python3 cso-scripts/build_and_analyze.py codesonar.conf codesonar import_sarif.py codesonar-scan.sarif -include-sources '**/*.js' -exclude-sources 'node_modules/**/*' -exclude-sources 'test/**/*'
+      - name: Temp fix for CSO4240
+        run: sed "s|\"partnerdemo|\"https://partnerdemo|g" warnings.sarif | sed "s|(partnerdemo|(https://partnerdemo|g" > t && mv t warnings.sarif
       - name: Upload SARIF to GitHub #Use this if you do not have GitHub Enterprise
         if: ${{ github.event.pull_request }}
         uses: actions/upload-artifact@v3
