--- a/.github/workflows/codesonar.yml
+++ b/.github/workflows/codesonar.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   CodeSonar_Analyze:
     permissions: write-all
-    runs-on: self-hosted
+    runs-on: codesecure-runner-set
     container:
       image: ghcr.io/codesecure-se/node-cso-builder:8.1p0
       credentials:
@@ -52,14 +52,12 @@ jobs:
              npm install --save-dev @microsoft/eslint-formatter-sarif
              npx eslint --no-inline-config -f @microsoft/eslint-formatter-sarif -o codesonar-scan.sarif . || true
              python3 cso-scripts/build_and_analyze.py codesonar.conf codesonar import_sarif.py codesonar-scan.sarif -include-sources '**/*.js' -exclude-sources 'node_modules/**/*' -exclude-sources 'test/**/*'
-      - name: Temp fix for CSO4240
-        run: sed "s|\"partnerdemo|\"https://partnerdemo|g" warnings.sarif | sed "s|(partnerdemo|(https://partnerdemo|g" > t && mv t warnings.sarif
-      - name: Upload SARIF to GitHub #Use this if you do not have GitHub Enterprise
-        if: ${{ github.event.pull_request }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: SARIF file
-          path: warnings.sarif
+#      - name: Upload SARIF to GitHub #Use this if you do not have GitHub Enterprise
+#        if: ${{ github.event.pull_request }}
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: SARIF file
+#          path: warnings.sarif
       - name: Push Summary Report
         if: ${{ github.event.pull_request }}
         uses: thollander/actions-comment-pull-request@v2
